crates/wac-parser/tests/resolution/fail/duplicate-resource-method.wac
resource x {
    x: func();
    x: static func();
}